@@ -18,7 +18,7 @@
         <org.springframework.security.version>3.1.3.RELEASE</org.springframework.security.version>
         <org.jsf.version>2.1.14</org.jsf.version>
         <org.hibernate.version>4.1.8.Final</org.hibernate.version>
-        <mysql.version>5.1.21</mysql.version>
+        <mysql.version>5.1.22</mysql.version>
     </properties>
     
     <dependencies>
@@ -62,11 +62,11 @@
             <artifactId>spring-aop</artifactId>
             <version>${org.springframework.version}</version>
         </dependency>
-        <!--dependency>
+        <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
             <version>1.7.1</version>
-        </dependency-->
+        </dependency>
         <!--
             Application Context (depends on spring-core, spring-expression, spring-aop, spring-beans)
             This is the central artifact for Spring's Dependency Injection Container and is generally always defined
@@ -238,12 +238,6 @@
         </dependency>
         
         <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
-            <version>2.1</version>
-        </dependency>
-        
-        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.2.2</version>
@@ -392,7 +386,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.5.1</version>
+                <version>2.6</version>
                 <executions>
                     <execution>
                         <phase>validate</phase>
@@ -445,21 +439,35 @@
     </build>
     <repositories>
         <repository>
-            <url>http://download.java.net/maven/2/</url>
-            <id>hibernate-support</id>
+            <id>m2.java.net</id>
+            <name>Java.net Maven 2 Repository</name>
+            <url>http://download.java.net/maven/2</url>
             <layout>default</layout>
-            <name>Repository for library Library[hibernate-support]</name>
         </repository>
         <repository>
-            <id>unknown-jars-temp-repo</id>
-            <name>A temporary repository created by NetBeans for libraries and jars it could not identify. Please replace the dependencies in this repository with correct ones and delete this repository.</name>
-            <url>file:${project.basedir}/lib</url>
+            <url>http://repo1.maven.org/maven2/</url>
+            <id>hibernate-support</id>
+            <name>Repository for library Library[hibernate-support]</name>
         </repository>
         <repository>
             <url>http://download.eclipse.org/rt/eclipselink/maven.repo/</url>
             <id>eclipselink</id>
-            <layout>default</layout>
             <name>Repository for library EclipseLink (JPA 2.0)</name>
+        </repository>
+        <repository>
+            <url>http://repo.springsource.org</url>
+            <id>springrepo</id>
+            <name>Repository for Spring libraries.</name>
+        </repository>
+        <repository>
+            <id>repository.jboss.org</id>
+            <name>jboss Maven Repository</name>
+            <url>http://repository.jboss.org/nexus/content/groups/public/</url>
+        </repository>
+        <repository>
+            <id>glassfish-repository</id>
+            <name>Repository for Glassfish</name>
+            <url>http://maven.glassfish.org/content/groups/glassfish</url>
         </repository>
     </repositories>
     
@@ -550,6 +558,7 @@
                     <plugin>
                         <groupId>org.codehaus.cargo</groupId>
                         <artifactId>cargo-maven2-plugin</artifactId>
+                        <version>1.3.1</version>
                         <configuration>
                             <wait>false</wait>
                         </configuration>
@@ -573,6 +582,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.12.4</version>
                         <executions>
                             <execution>
                                 <phase>integration-test</phase>
@@ -599,23 +609,92 @@
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-checkstyle-plugin</artifactId>
-                        <version>2.9.1</version>
-                        <configuration>
-                            <enableRulesSummary>false</enableRulesSummary>
-                            <configLocation>config/sun_checks.xml</configLocation>
-                            <failsOnError>false</failsOnError>
-                            <failOnViolation>false</failOnViolation>
-                        </configuration>
+                        <artifactId>maven-site-plugin</artifactId>
+                        <version>3.2</version>
                         <executions>
-                            <execution>
-                                <phase>compile</phase>
-                                <goals>
-                                    <goal>check</goal>
-                                </goals>
-                                
-                            </execution>
                         </executions>
+                        <dependencies>
+                        </dependencies>
+                        <configuration>
+                            <reportPlugins>
+                                <plugin>
+                                    <groupId>org.apache.maven.plugins</groupId>
+                                    <artifactId>maven-project-info-reports-plugin</artifactId>
+                                    <version>2.2</version>
+                                    <reports>
+                                        <report>index</report>
+                                        <report>project-team</report>
+                                        <report>license</report>
+                                        <report>mailing-list</report>
+                                        <report>dependencies</report>
+                                        <report>dependency-convergence</report>
+                                        <report>plugin-management</report>
+                                        <report>cim</report>
+                                        <report>issue-tracking</report>
+                                        <report>scm</report>
+                                        <report>summary</report>
+                                    </reports>
+                                </plugin>
+                                <plugin>
+                                    <groupId>org.apache.maven.plugins</groupId>
+                                    <artifactId>maven-surefire-report-plugin</artifactId>
+                                    <version>2.12.4</version>
+                                    
+                                </plugin>
+                                <!--                                <plugin>
+                                    <groupId>org.apache.maven.plugins</groupId>
+                                    <artifactId>maven-javadoc-plugin</artifactId>
+                                    <version>2.7</version>
+                                </plugin> -->
+                                <plugin>
+                                    <groupId>org.apache.maven.plugins</groupId>
+                                    <artifactId>maven-checkstyle-plugin</artifactId>
+                                    <version>2.9.1</version>
+                                </plugin>
+                                <plugin>
+                                    <groupId>org.codehaus.mojo</groupId>
+                                    <artifactId>findbugs-maven-plugin</artifactId>
+                                    <version>2.5.2</version>
+                                    <configuration>
+                                        <argLine>-Xmx256m</argLine>
+                                        <argLine>-XX:MaxPermSize=256m</argLine>
+                                    </configuration>
+                                    <!-- Usually findbugs needs a lot of memory, change these values if needed. -->
+                                </plugin>
+                                <plugin>
+                                    <groupId>org.codehaus.mojo</groupId>
+                                    <artifactId>jdepend-maven-plugin</artifactId>
+                                    <version>2.0-beta-2</version>
+                                </plugin>
+                                <plugin>
+                                    <groupId>org.codehaus.mojo</groupId>
+                                    <artifactId>cobertura-maven-plugin</artifactId>
+                                    <version>2.5.2</version>
+                                </plugin>
+                                <plugin>
+                                    <groupId>org.codehaus.mojo</groupId>
+                                    <artifactId>taglist-maven-plugin</artifactId>
+                                    <version>2.4</version>
+                                </plugin>
+                                <plugin>
+                                    <groupId>org.apache.maven.plugins</groupId>
+                                    <artifactId>maven-jxr-plugin</artifactId>
+                                    <version>2.3</version>
+                                </plugin>
+                                <plugin>
+                                    <groupId>org.apache.maven.plugins</groupId>
+                                    <artifactId>maven-pmd-plugin</artifactId>
+                                    <version>2.7.1</version>
+                                    <configuration>
+                                        <linkXref>true</linkXref>
+                                        <minimumTokens>100</minimumTokens>
+                                        <minimumPriority>3</minimumPriority>
+                                        <!-- Change minimum priority to see more or less messages -->
+                                        <targetJdk>1.6</targetJdk>
+                                    </configuration>
+                                </plugin>
+                            </reportPlugins>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
@@ -732,34 +811,4 @@
             </build>
         </profile> 
     </profiles>
-    
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jxr-plugin</artifactId>
-                <version>2.3</version>
-            </plugin>
-<!--            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.3</version>
-                
-            </plugin>-->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <version>2.5.2</version>
-                <configuration>
-                    <threshold>Low</threshold><!-- High|Normal|Low|Exp|Ignore -->
-                    <effort>Default</effort><!-- Min|Default|Max -->
-                    <xmlOutput>true</xmlOutput>
-                    <!-- Optional directory to put findbugs xdoc xml report -->
-                    <xmlOutputDirectory>target/site</xmlOutputDirectory>
-                </configuration>
-            </plugin>
-                    
-        </plugins>
-        
-    </reporting>
 </project>
